# ai_chat_lib

./: .clinerules  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
ai_chat_lib/: __init__.py
ai_chat_lib/api_modules/: __init__.py  ai_app_process_checker.py  ai_app_server.py  ai_app_server_shutdown.py  ai_app_util.py  ai_app_wrapper.py  mcp_app_server.py
ai_chat_lib/autogen_modules/: __init__.py  agent_tools.py  autogen_props.py  default_tools.py  extract_webpage.py  search_wikipedia_ja.py  vector_db_tools.py
ai_chat_lib/chat_modules/: __init__.py  chat_util.py
ai_chat_lib/cmd_tools/: autogen_group_chat_api.py  client_util.py  embeddings_uploader_local.py  folders.py  folders_api.py  normal_chat_api.py  normal_chat_local.py  request_template.jsonc  vector_search_api.py  vector_search_local.py
ai_chat_lib/db_modules/: __init__.py  auto_process_item.py  auto_process_rule.py  autogen_agent.py  autogen_group_chat.py  autogen_llm_config.py  autogen_tools.py  content_folder.py  content_folders_catalog.py  content_item.py  embedding_data.py  main_db.py  main_db_util.py  prompt_item.py  search_condition.py  search_rule.py  tag_item.py  vector_db_item.py  vector_search_request.py
ai_chat_lib/file_modules/: __init__.py  excel_util.py  file_util.py
ai_chat_lib/langchain_modules/: __init__.py  embedding_data.py  langchain_client.py  langchain_doc_store.py  langchain_doc_store_postgres.py  langchain_util.py  (+5 more)
memory-bank/: activeContext.md  excludedPaths.md  operationalPatterns.md  platformContext.md  progress.md  projectbrief.md  techContext.md
(+18 files in other folders)
